[package]
name = "test_rocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = "0.21.0"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.30"
futures-channel = "0.3.30"
log = "0.4.17"
anyhow = "1.0.80"
serde = { version = "1.0.197", features = ["derive"]}
serde_json = "1.0.114"
url = "2.5.0"
reqwest = { version = "0.11.25", features = ["json"]}
xtra = { version = "0.6.0", features = ["macros", "tokio"]}
openssl = { version = "0.10", features = ["vendored"] }
dotenv = "0.15.0"

[dependencies.uuid]
version = "1.7.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
